37559 Landing_аудио Tronsmart - правка путей + правки по ревью

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,7 @@
 <header class="header">
 	<div class="container">
 		<div class="header__logo">
-			<span class="header__dns-logo"><a href="#" class="header__dns-link"></a></span>
+			<span class="header__dns-logo"></span>
 		</div>
 		<div class="header__logo">
 			<div class="header__tronsmart-logo"></div>
@@ -97,7 +97,7 @@
 	</section>
 	<section class="section-control">
 		<div class="container">
-			<div class="section-control__title">Интуитивное управление</div>
+			<div class="section-control__title section-control__title_center">Интуитивное управление</div>
 			<div class="section-control__text">
 				<p class="section-control__text-line">Контролируйте громкость с помощью простого вращающегося
 					колеса.</p>
@@ -108,15 +108,15 @@
 			</div>
 			<div class="section-control__row">
 				<div class="section-control__block">
-					<div data-content="Воспроизвести следующую песню. Воспроизведи мой ежедневный микс на Spotify."
-					     class="section-control__pseudo-wrapper">
-						<img src="./img/control-button.png" alt="Control button"
-						     data-content="Воспроизвести следующую песню. Воспроизведи мой ежедневный микс на Spotify."
-						     class="section-control__img section-control__control-button">
+					<div data-content="Воспроизвести следующую песню. Воспроизведи мой ежедневный микс на Spotify." class="section-control__pseudo-wrapper">
+						<img src="./img/control-button.png" alt="Control button" class="section-control__img section-control__control-button">
 					</div>
 				</div>
-				<div class="section-control__block"><img src="./img/control-rotor.png" alt="Volume control"
-				                                         class="section-control__img"></div>
+				<div class="section-control__block">
+					<div>
+						<img src="./img/control-rotor.png" alt="Volume control" class="section-control__img">
+					</div>
+				</div>
 			</div>
 			<div class="section-control__row">
 				<div class="section-control__block">
@@ -133,8 +133,8 @@
 			<div class="section-control__row">
 				<div class="section-control__block">
 					<div class="section-control__content">
-						<div class="section-control__title">До 15 часов без подзарядки</div>
-						<p class="section-control__text-line">Мощный аккумулятор позволит наслаждаться музыкой на
+						<div class="section-control__title">До 15 часов <br>без подзарядки</div>
+						<p class="section-control__text-line">Мощный аккумулятор позволит наслаждаться музыкой <br>на
 							протяжении долгого времени.</p>
 					</div>
 				</div>
@@ -165,7 +165,7 @@
 						<div class="section-products__card-title">Портативная аудиосистема Tronsmart Element T6 Plus чёрная</div>
 						<div class="section-products__spec">40Вт, Bluetooth, AUX, USB, SD, TWS, IPX6, Powerbank,15 часов</div>
 						<div class="section-products__price">4 999 ₽</div>
-						<a href="#" class="section-products__buy-button">Купить</a>
+						<a href="https://www.dns-shop.ru/product/5881ec61662a1b80/portativnaa-audiosistema-tronsmart-element-t6-plus-cernyj/" class="section-products__buy-button">Купить</a>
 					</div>
 				</div>
 				<div class="section-products__card">
@@ -173,10 +173,10 @@
 						<img src="./img/speaker-red.jpg" alt="Product speaker black" class="section-products__img">
 					</div>
 					<div class="section-products__content">
-						<div class="section-products__card-title">Портативная аудиосистема Tronsmart Element T6 Plus чёрная</div>
+						<div class="section-products__card-title">Портативная аудиосистема Tronsmart Element T6 Plus красная</div>
 						<div class="section-products__spec">40Вт, Bluetooth, AUX, USB, SD, TWS, IPX6, Powerbank,15 часов</div>
 						<div class="section-products__price">4 999 ₽</div>
-						<a href="#" class="section-products__buy-button">Купить</a>
+						<a href="https://www.dns-shop.ru/product/e016994c81a63332/portativnaa-audiosistema-tronsmart-element-t6-plus-krasnyj/" class="section-products__buy-button">Купить</a>
 					</div>
 				</div>
 			</div>
@@ -189,28 +189,28 @@
 						<img src="./img/tronsmart-splash-bluetooth-speaker.jpg" alt="Bluetooth speaker" class="section-products__element-img">
 					</div>
 					<div class="section-products__element-name">Беспроводная колонка Splash</div>
-					<a href="" class="section-products__more-button">Подробнее</a></div>
+					<a href="https://www.dns-shop.ru/product/a6e007237a923330/portativnaa-kolonka-tronsmart-element-splash-cernyj/" class="section-products__more-button">Подробнее</a></div>
 				<div class="section-products__element">
 					<div class="section-products__element-image-wrapper">
 						<img src="./img/tronsmart-encore-spunky-buds-bluetooth-headphones-black.jpg" alt="Bluetooth speaker" class="section-products__element-img">
 					</div>
 					<div class="section-products__element-name">Беспроводные наушники TWS Spunky Buds</div>
-					<a href="" class="section-products__more-button">Подробнее</a></div>
+					<a href="https://www.dns-shop.ru/product/33a8b87e96b63330/nausniki-tws-tronsmart-spunky-buds-cernyj/" class="section-products__more-button">Подробнее</a></div>
 				<div class="section-products__element">
 					<div class="section-products__element-image-wrapper">
 						<img src="./img/tronsmart-encore-spunky-buds-bluetooth-headphones.jpg" alt="Bluetooth speaker" class="section-products__element-img">
 					</div>
-					<div class="section-products__element-name">Беспроводная колонка Splash</div>
-					<a href="" class="section-products__more-button">Подробнее</a></div>
+					<div class="section-products__element-name">Беспроводные Наушники TWS Spunky Buds белый</div>
+					<a href="https://www.dns-shop.ru/product/24fbbbbf35a91b80/nausniki-tws-tronsmart-spunky-buds-belyj/" class="section-products__more-button">Подробнее</a></div>
 				<div class="section-products__element">
 					<div class="section-products__element-image-wrapper">
 						<img src="./img/tronsmart-element-mega-bluetooth-speaker.jpg" alt="Bluetooth speaker" class="section-products__element-img">
 					</div>
-					<div class="section-products__element-name">Беспроводная колонка Splash</div>
-					<a href="" class="section-products__more-button">Подробнее</a></div>
+					<div class="section-products__element-name">Портативная аудиосистема Tronsmart Element Mega черный</div>
+					<a href="https://www.dns-shop.ru/product/9af50b1099ef3330/portativnaa-audiosistema-tronsmart-element-mega-cernyj/" class="section-products__more-button">Подробнее</a></div>
 			</div>
 			<div class="section-products__row section-products__row_center">
-				<a href="#" class="section-products__catalog-button">Перейти в полный каталог</a>
+				<a href="https://www.dns-shop.ru/catalog/17a8c3d816404e77/portativnye-kolonki-i-audiosistemy/?brand=brand-tronsmart" class="section-products__catalog-button">Перейти в полный каталог</a>
 			</div>
 		</div>
 	</section>
@@ -218,8 +218,8 @@
 <footer class="footer">
 	<div class="container">
 		<div class="footer__row">
-			<div class="footer__left"><a class="footer__dns-link" href="#"></a></div>
-			<div class="footer__right"><a class="footer__tronsmart-link" href="#"></a></div>
+			<div class="footer__left"><span class="footer__dns"></span></div>
+			<div class="footer__right"><span class="footer__tronsmart"></span></div>
 		</div>
 		<div class="footer__row">
 			<p class="footer__copyright" data-copyright></p>
