--- a/src/html/index.html
+++ b/src/html/index.html
@@ -55,7 +55,15 @@
 					</div>
 				</div>
 				<div class="section-sound__wrapper-img">
-					<img src="./img/speaker.png" alt="speaker">
+					<div class="section-sound__img-speaker">
+						<span class="section-sound__img-vibe-01"></span>
+						<span class="section-sound__img-vibe-02"></span>
+						<span class="section-sound__img-vibe-03"></span>
+						<span class="section-sound__img-vibe-04"></span>
+						<span class="section-sound__img-vibe-05"></span>
+						<span class="section-sound__img-vibe-06"></span>
+						<span class="section-sound__img-vibe-00"></span>
+					</div>
 				</div>
 			</div>
 			<div class="section-sound__row">
@@ -108,13 +116,25 @@
 			</div>
 			<div class="section-control__row">
 				<div class="section-control__block">
-					<div data-content="Воспроизвести следующую песню. Воспроизведи мой ежедневный микс на Spotify." class="section-control__pseudo-wrapper">
-						<img src="./img/control-button.png" alt="Control button" class="section-control__img section-control__control-button">
+					<div
+						class="section-control__img-button section-control__pseudo-wrapper"
+						data-content="Воспроизвести следующую песню. Воспроизведи мой ежедневный микс на Spotify."
+					>
+						<div class="section-control__img-button-bg"></div>
+						<div class="section-control__img-button-arrows">
+							<div class="section-control__img-button-arrow-01"></div>
+							<div class="section-control__img-button-arrow-02"></div>
+							<div class="section-control__img-button-arrow-03"></div>
+							<div class="section-control__img-button-arrow-04"></div>
+						</div>
 					</div>
 				</div>
 				<div class="section-control__block">
 					<div>
-						<img src="./img/control-rotor.png" alt="Volume control" class="section-control__img">
+						<div class="section-control__img-rotor">
+							<div class="section-control__img-rotor-bg"></div>
+							<div class="section-control__img-rotor-spin"></div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -162,10 +182,15 @@
 						<img src="./img/speaker-black.jpg" alt="Product speaker black" class="section-products__img">
 					</div>
 					<div class="section-products__content">
-						<div class="section-products__card-title">Портативная аудиосистема Tronsmart Element T6 Plus чёрная</div>
-						<div class="section-products__spec">40Вт, Bluetooth, AUX, USB, SD, TWS, IPX6, Powerbank,15 часов</div>
+						<div class="section-products__card-title">Портативная аудиосистема Tronsmart Element T6 Plus
+							чёрная
+						</div>
+						<div class="section-products__spec">40Вт, Bluetooth, AUX, USB, SD, TWS, IPX6, Powerbank,15
+							часов
+						</div>
 						<div class="section-products__price">4 999 ₽</div>
-						<a href="https://www.dns-shop.ru/product/5881ec61662a1b80/portativnaa-audiosistema-tronsmart-element-t6-plus-cernyj/" class="section-products__buy-button">Купить</a>
+						<a href="https://www.dns-shop.ru/product/5881ec61662a1b80/portativnaa-audiosistema-tronsmart-element-t6-plus-cernyj/"
+						   class="section-products__buy-button">Купить</a>
 					</div>
 				</div>
 				<div class="section-products__card">
@@ -173,10 +198,15 @@
 						<img src="./img/speaker-red.jpg" alt="Product speaker black" class="section-products__img">
 					</div>
 					<div class="section-products__content">
-						<div class="section-products__card-title">Портативная аудиосистема Tronsmart Element T6 Plus красная</div>
-						<div class="section-products__spec">40Вт, Bluetooth, AUX, USB, SD, TWS, IPX6, Powerbank,15 часов</div>
+						<div class="section-products__card-title">Портативная аудиосистема Tronsmart Element T6 Plus
+							красная
+						</div>
+						<div class="section-products__spec">40Вт, Bluetooth, AUX, USB, SD, TWS, IPX6, Powerbank,15
+							часов
+						</div>
 						<div class="section-products__price">4 999 ₽</div>
-						<a href="https://www.dns-shop.ru/product/e016994c81a63332/portativnaa-audiosistema-tronsmart-element-t6-plus-krasnyj/" class="section-products__buy-button">Купить</a>
+						<a href="https://www.dns-shop.ru/product/e016994c81a63332/portativnaa-audiosistema-tronsmart-element-t6-plus-krasnyj/"
+						   class="section-products__buy-button">Купить</a>
 					</div>
 				</div>
 			</div>
@@ -186,31 +216,41 @@
 			<div class="section-products__row">
 				<div class="section-products__element">
 					<div class="section-products__element-image-wrapper">
-						<img src="./img/tronsmart-splash-bluetooth-speaker.jpg" alt="Bluetooth speaker" class="section-products__element-img">
+						<img src="./img/tronsmart-splash-bluetooth-speaker.jpg" alt="Bluetooth speaker"
+						     class="section-products__element-img">
 					</div>
 					<div class="section-products__element-name">Беспроводная колонка Splash</div>
-					<a href="https://www.dns-shop.ru/product/a6e007237a923330/portativnaa-kolonka-tronsmart-element-splash-cernyj/" class="section-products__more-button">Подробнее</a></div>
+					<a href="https://www.dns-shop.ru/product/a6e007237a923330/portativnaa-kolonka-tronsmart-element-splash-cernyj/"
+					   class="section-products__more-button">Подробнее</a></div>
 				<div class="section-products__element">
 					<div class="section-products__element-image-wrapper">
-						<img src="./img/tronsmart-encore-spunky-buds-bluetooth-headphones-black.jpg" alt="Bluetooth speaker" class="section-products__element-img">
+						<img src="./img/tronsmart-encore-spunky-buds-bluetooth-headphones-black.jpg"
+						     alt="Bluetooth speaker" class="section-products__element-img">
 					</div>
 					<div class="section-products__element-name">Беспроводные наушники TWS Spunky Buds</div>
-					<a href="https://www.dns-shop.ru/product/33a8b87e96b63330/nausniki-tws-tronsmart-spunky-buds-cernyj/" class="section-products__more-button">Подробнее</a></div>
+					<a href="https://www.dns-shop.ru/product/33a8b87e96b63330/nausniki-tws-tronsmart-spunky-buds-cernyj/"
+					   class="section-products__more-button">Подробнее</a></div>
 				<div class="section-products__element">
 					<div class="section-products__element-image-wrapper">
-						<img src="./img/tronsmart-encore-spunky-buds-bluetooth-headphones.jpg" alt="Bluetooth speaker" class="section-products__element-img">
+						<img src="./img/tronsmart-encore-spunky-buds-bluetooth-headphones.jpg" alt="Bluetooth speaker"
+						     class="section-products__element-img">
 					</div>
 					<div class="section-products__element-name">Беспроводные Наушники TWS Spunky Buds белый</div>
-					<a href="https://www.dns-shop.ru/product/24fbbbbf35a91b80/nausniki-tws-tronsmart-spunky-buds-belyj/" class="section-products__more-button">Подробнее</a></div>
+					<a href="https://www.dns-shop.ru/product/24fbbbbf35a91b80/nausniki-tws-tronsmart-spunky-buds-belyj/"
+					   class="section-products__more-button">Подробнее</a></div>
 				<div class="section-products__element">
 					<div class="section-products__element-image-wrapper">
-						<img src="./img/tronsmart-element-mega-bluetooth-speaker.jpg" alt="Bluetooth speaker" class="section-products__element-img">
+						<img src="./img/tronsmart-element-mega-bluetooth-speaker.jpg" alt="Bluetooth speaker"
+						     class="section-products__element-img">
 					</div>
-					<div class="section-products__element-name">Портативная аудиосистема Tronsmart Element Mega черный</div>
-					<a href="https://www.dns-shop.ru/product/9af50b1099ef3330/portativnaa-audiosistema-tronsmart-element-mega-cernyj/" class="section-products__more-button">Подробнее</a></div>
+					<div class="section-products__element-name">Портативная аудиосистема Tronsmart Element Mega черный
+					</div>
+					<a href="https://www.dns-shop.ru/product/9af50b1099ef3330/portativnaa-audiosistema-tronsmart-element-mega-cernyj/"
+					   class="section-products__more-button">Подробнее</a></div>
 			</div>
 			<div class="section-products__row section-products__row_center">
-				<a href="https://www.dns-shop.ru/catalog/17a8c3d816404e77/portativnye-kolonki-i-audiosistemy/?brand=brand-tronsmart" class="section-products__catalog-button">Перейти в полный каталог</a>
+				<a href="https://www.dns-shop.ru/catalog/17a8c3d816404e77/portativnye-kolonki-i-audiosistemy/?brand=brand-tronsmart"
+				   class="section-products__catalog-button">Перейти в полный каталог</a>
 			</div>
 		</div>
 	</section>
